hphp/test/slow/attributes/soft/not_soft.php.expectf
Fatal error: Only the `__Soft` attribute is allowed here. in %s/test/slow/attributes/soft/not_soft.php on line 3
